package model;

public interface Publicacion {

    public void mostrar();

    public String toString();
}
