package service;

public interface Convertible {
    public Dataset parser();
}
